[package]
name = "proof-experimentation"
version = "0.1.0"
edition = "2021"

# Example of customizing binaries in Cargo.toml.
[[bin]]
name = "proof-experimentation"
path = "proof-experimentation/main.rs"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ministark-gpu = { version = "0.2", git = "https://github.com/andrewmilson/ministark" }
ministark = { git = "https://github.com/andrewmilson/ministark" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
sandstorm-binary = { git = "https://github.com/andrewmilson/sandstorm" }
sandstorm-layouts = { git = "https://github.com/andrewmilson/sandstorm" }
sandstorm-crypto = { git = "https://github.com/andrewmilson/sandstorm" }
sandstorm = { git = "https://github.com/andrewmilson/sandstorm" }
ark-serialize = "0.4"
num-bigint = { version = "0.4" }
ark-ff = "0.4"
ark-poly = "0.4"
sha2 = "0.10"
ruint = { version = "1.7", features = ["serde", "num-bigint"] }
sha3 = "0.10"
